# Protein-Structure-Prediction

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  aa_rmsd  brkga_commons.hpp  brkga_main.cpp  ca_rmsd  diver.plot  experiments.py  experiments.sh  fit.plot  frontier.info  ga_main.cpp  gdttm  main.cpp  mo2fit.plot  mo3fit.plot  mobrkga_main.cpp  population_score.cpp  population_score.sh  predictor.conf  protein_brkga.hpp  protein_commons.hpp  protein_utils.hpp  res.aa_rmsd  res.ca_rmsd  res.diver  res.fit  res.rmsd  res_0.fit  res_1.fit  res_2.fit  res_3.fit  res_4.fit  res_5.fit  rosetta.hpp  rosetta.sh  run.sh  (+8 more)
commons/: .clang-format
commons/include/: macros.hpp  types.hpp
evolutionary_algorithms/: CMakeLists.txt  res.diver  res.fit
evolutionary_algorithms/commons/: CMakeLists.txt
evolutionary_algorithms/commons/include/: types.hpp
evolutionary_algorithms/core/: CMakeLists.txt
evolutionary_algorithms/core/include/: fitness.hpp  genotype.hpp  individual.hpp  phenotype.hpp  population.hpp
evolutionary_algorithms/core/src/: fitness.cpp  genotype.cpp  individual.cpp  phenotype.cpp
evolutionary_algorithms/core/test/: CMakeLists.txt  testIndividual.cpp  testPopulation.cpp
evolutionary_algorithms/examples/: CMakeLists.txt
evolutionary_algorithms/examples/brkga/: ackley.cpp
evolutionary_algorithms/examples/ga/: CMakeLists.txt  ackley.cpp  gp1.cpp  integer_sum.cpp  rosenbrock.cpp  schaffer.cpp  schwefel.cpp  sphere.cpp  step.cpp
evolutionary_algorithms/include/evo_alg/: commons.hpp  core.hpp
evolutionary_algorithms/include/evo_alg/algorithms/: brkga.hpp  ga.hpp
evolutionary_algorithms/include/evo_alg/commons/: macros.hpp  types.hpp  utils.hpp
evolutionary_algorithms/include/evo_alg/core/: fitness.hpp  genotype.hpp  individual.hpp  phenotype.hpp  population.hpp
evolutionary_algorithms/include/evo_alg/operators/: initialization.hpp  mutation.hpp  recombination.hpp  selection.hpp
evolutionary_algorithms/src/: CMakeLists.txt
evolutionary_algorithms/src/algorithms/: CMakeLists.txt  ga.cpp
evolutionary_algorithms/src/commons/: utils.cpp
evolutionary_algorithms/src/core/: fitness.cpp
evolutionary_algorithms/src/operators/: CMakeLists.txt
evolutionary_algorithms/src/operators/mutation/: CMakeLists.txt  bitFlip.cpp  polynomial.cpp
evolutionary_algorithms/src/operators/recombination/: CMakeLists.txt  arithmetic.cpp  point.cpp  sbx.cpp
evolutionary_algorithms/src/operators/selection/: CMakeLists.txt  roulette.cpp  tournament.cpp
evolutionary_algorithms/tests/core/: testIndividual.cpp  testPopulation.cpp
proteins/: 1crn.horiz  1dfn.fasta  1fd4.frag3  1fd4.ss2  1gb1.fasta  1gb1.ss2
proteins/1ab1/: con_meta  con_raptorx  con_spot  fasta  frag3  horiz  pdb  ss2  ss_psipred  ss_raptorx  ss_spider3
proteins/1acw/: con  con_meta  con_spot  frag3  frag9  pdb  ss_psipred  ss_raptorx  ss_spider3
proteins/1ail/: con_meta  con_raptorx  con_spot  frag3  info  pdb  ss_psipred  ss_raptorx  ss_spider3
proteins/1aly/: con  con_meta  con_spot  horiz  pdb  s0.spd33  s0.spotcon  ss2  ss_psipred  ss_raptorx  ss_spider3
proteins/1bdd/: con_meta  con_raptorx  con_spot  fasta  frag3  horiz  pdb  ss2  ss_psipred  ss_raptorx  ss_spider3
proteins/1crn/: con  con_gremlin  con_meta  con_spot  frag3  pdb  ss_psipred  ss_raptorx  ss_spider3
proteins/1dfn/: con  con_gremlin  con_meta  con_raptorx  con_spot  frag3  frag9  horiz  pdb  ss2  ss_psipred  ss_raptorx  ss_spider3
proteins/1enh/: con_meta  con_raptorx  con_spot  frag3  pdb  ss_psipred  ss_raptorx  ss_spider3
proteins/1fd4/: fasta  horiz  pdb
proteins/1gb1/: con  con_meta  con_spot  frag3  horiz  pdb  ss_psipred  ss_raptorx  ss_spider3
proteins/1hhp/: con  con_gremlin  con_meta  con_spot  fasta  horiz  ss2  ss_psipred  ss_raptorx  ss_spider3
proteins/1i6c/: con  con_meta  con_spot  frag3  horiz  pdb  ss_psipred  ss_raptorx  ss_spider3
proteins/1rop/: con  con_meta  con_spot  frag3  info  pdb  ss_psipred  ss_raptorx  ss_spider3
proteins/1vii/: con  con_raptorx  con_spot  frag3  horiz  ss2  ss_spider3
proteins/1zdd/: con  con_meta  con_spot  frag3  pdb  ss2  ss_psipred  ss_raptorx  ss_spider3
proteins/2hg6/: fasta  horiz  pdb  ss2
proteins/2imu/: con  con_raptorx  con_spot  fasta  frag3  horiz  pdb  ss2  ss_spider3
proteins/2kdl/: con  con_meta  con_spot  frag3  horiz  pdb  ss2  ss_psipred  ss_raptorx  ss_spider3
proteins/2mr9/: con_meta  con_raptorx  con_spot  frag3  pdb  ss_psipred  ss_raptorx  ss_spider3
proteins/2p5k/: con  fasta  frag3  horiz  ss2
proteins/2p81/: con_meta  con_raptorx  con_spot  frag3  pdb  s0.spotcon  ss_psipred  ss_raptorx  ss_spider3
proteins/T0868/: con  con_meta  con_raptorx  con_spot  horiz  info  pdb  ss_psipred  ss_raptorx  ss_spider3
proteins/T0900/: con  con_meta  con_raptorx  con_spot  fasta  horiz  info  ss2  ss_psipred  ss_raptorx  ss_spider3
proteins/T0968s1/: con  con_meta  con_spot  horiz  info  pdb  ss_psipred  ss_raptorx  ss_spider3
proteins/T1010/: con_meta.txt  con_raptorx  con_spot  fasta  horiz  pdb  ss_psipred  ss_raptorx  ss_spider3
real_time_plot/: a.out  aaa  lel  test.cpp  test.hpp  test.py  test2.cpp  test2.py
scripts/: best_score.py  diversity_plot.py  diversity_plot.sh  experiments.py  experiments.sh  experiments_2.py  experiments_3.py  experiments_parallel.sh  experiments_parallel_optimal.sh  experiments_rosetta.sh  experiments_serial.sh  fitness_convergence.py  fitness_plot.py  fitness_radviz.py  gen_hypervolume.sh  hypervolume_mean.sh  mean_diversity.py  mean_hypervolume.py  mufold.sh  mufold_select.sh  population_score.cpp  population_score.sh  prepare_results.sh  rosetta.sh  rosetta_abinitio.sh  run.sh  score_calc.cpp  score_calc.sh  scores.sh  summary.py  summary2.py  summary3.py  test.py  test2  values.py
scripts/plot/: diversity_plot.py  fitness_plot.py  fitness_radviz.py  hypervolume_plot.py  hypervolume_plot.sh  plot.sh  plot_frontiers.sh
statistics/: chen2020  narloch2020  proteins_works  results.txt  song2018  zhang2018
statistics/experiments_1/: results.txt  values.txt
(+1263 files in other folders)
